--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,17 @@ spring.application.name=big_data_m1_23_24
 spring.datasource.url=jdbc:h2:mem:devDb
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+spring.cassandra.schema-action=CREATE_IF_NOT_EXISTS
+spring.cassandra.request.timeout=10s
+spring.cassandra.connection.connect-timeout=10s
+spring.cassandra.connection.init-query-timeout=10s
+
+# Credentials to Astra DB
+astra.client-id=<CLIENT_ID>
+astra.client-secret=<CLIENT_SECRET>
+astra.application-token=<APP_TOKEN>
+
+# Select an Astra instance
+astra.cloud-region=<DB_REGION>
+astra.database-id=<DB_ID>
+astra.keyspace=spring_cassandra
