--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ astra.application-token=<APP_TOKEN>
 astra.cloud-region=<DB_REGION>
 astra.database-id=<DB_ID>
 astra.keyspace=spring_cassandra
+
+# MongoDB Connection
+spring.data.mongodb.uri=mongodb+srv://miageuser:6QDXDyS4iMAcdDN4@cluster0.fkfchwt.mongodb.net/
